syntax = "proto3";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
}
